corrected all alignment issues for all screen sizes / updated imgs with a shadow effect / updated the navbar to stick to the top and come down upon scrolling down the page / updated primary colors / added hover transitions to some img tags / backend work upcoming for the weather section to function properly

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -23,3 +23,8 @@ $malachite: #0BDA51;
 $spring-green: #00FF7F;
 $pear: #C9CC3F;
 $smoke: #848884;
+$platinum: #E5E4E2;
+$off-white: #FAF9F6;
+
+// gradients
+
